# invisible-watermark

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/imwatermark/: __init__.py  watermark.py
