[metadata]
name = invisible-watermark
author = Andi Powers-Holmes
email = aholmes@omnom.net
maintainer = Andi Powers-Holmes
maintainer_email = aholmes@omnom.net
license_files = LICENSE.md

[options]
python_requires = >=3.8
packages = find:
package_dir =
    =src
py_modules =
    imwatermark
include_package_data = True
install_requires =
    numpy >= 1.17.0

[options.packages.find]
where = src

[options.package_data]
    * = *.txt, *.md

[options.extras_require]
dev =
    black >= 22.3.0
    ruff >= 0.0.234
    setuptools-scm >= 7.0.0

[flake8]
max-line-length = 110
ignore =
    # these are annoying during development but should be enabled later
    F401 # module imported but unused
    F841 # local variable is assigned to but never used
    # black automatically fixes this
    E501 # line too long
    # black breaks these two rules:
    E203 # whitespace before :
    W503 # line break before binary operator
extend-exclude =
    .venv
